2003-06-22	ujwal

    * Updated documentation.

2003-06-21	ujwal

    * Version string in "About" box is dynamically generated.
    
    * Changed version number to 0.7.5

2003-06-19	ujwal

    * Updated localizations.

2003-06-18	ujwal

    * Updated Korean translation from TaeYoung Oh.

    * Added UI preference to enforce character alignment.
    
    * Removed "Save" and "Cancel" buttons from Bookmarks window.
    
    * Added support to select and launch multiple sessions in bookmarks.

2003-06-16	ujwal

    * Improved printing support.

2003-06-15	ujwal

    * Incorporated Peter Lewis' "Paste Selection" patch.

2003-06-14	ujwal

    * Reverted back to v1.20 of VT100Typesetter accunting for line 
      endings at the end of the line instead of beginning since the 
      other version was more problematic. This version now handles 
      new line characters at the end correctly.
      
2003-06-13	ujwal

    * Fixed bug in VT100Typesetter line bounds calculation where 
      the new line character should be at the beginning rather 
      than at the end. Otherwise text ending in a new line character 
      will not display the ending new line.

2003-06-12	ujwal

    * Created VT100TextStorage class subclassing NSTextStorage.

2003-06-11	ujwal

    * Using embedded FreeMono font for graphical characters 
      since that font provides all the glyphs.
      
    * VT100Terminal does not set NSCharacterWidthAttributeName for ascii text.
      This is so that the custom typesetter can easily check 
      for double width characters by just looking for the existence of the 
      attribute.
      
    * Created VT100LayoutManager, a NSLayoutManager subclass to speed up 
      some operations such as window resizing.

2003-06-10	ujwal

    * Bug fixes and speed improvement to VT100Typesetter.

2003-06-09	fabian
    * Let VT100Typesetter layout every glyph. Glyph alignment
      problem solved. But, 
        1. speed is much slower (~2x), 