@@ -1,6 +1,8 @@
 2003-06-22	ujwal
 
     * Updated documentation.
+    
+    * Remapping of delete key can be toggled with Alt-Delete sequence.
 
 2003-06-21	ujwal
 
